--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     </style>
 </head>
 <body>
-    <div id="sidebar">
-        <h2>Centrum Nápovědy</h2>
-        <div class="menu-item" onclick="loadContent('manual')">📖 Emmy manuál - Polsko</div>
-        <div class="menu-item" onclick="loadContent('tips')">⚙️ Tipy a triky – Jak spustit Emmy</div>
-        <div class="menu-item" onclick="loadContent('graphics')">📜 Grafické materiály</div>
-        <div class="menu-item" onclick="loadContent('voice')">🔊 Hlas Emmy</div>
-    </div>
+ <div id="sidebar">
+    <h2>Centrum Nápovědy</h2>
+    <a href="manual.html">📖 Emmy manuál - Polsko</a>
+    <a href="tips.html">⚙️ Tipy a triky – Jak spustit Emmy</a>
+    <a href="graphics.html">📜 Grafické materiály</a>
+    <a href="voice.html">🔊 Hlas Emmy</a>
+</div>
     <div id="content">
         <h2>Vítejte v centru nápovědy Emmy</h2>
         <p>Vyberte téma z levého menu.</p>
