--- a/graphics.html
+++ b/graphics.html
@@ -3,15 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emmy manuál - Polsko</title>
+    <title>Grafické materiály</title>
     <style>
         body { font-family: Arial, sans-serif; padding: 20px; max-width: 800px; margin: auto; }
-        a { display: block; margin-bottom: 20px; }
+        a { display: block; margin-bottom: 10px; color: blue; text-decoration: none; }
+        a:hover { text-decoration: underline; }
     </style>
 </head>
 <body>
     <a href="index.html">⬅ Zpět na hlavní stránku</a>
-    <h1>📖 Emmy manuál - Polsko</h1>
-    <p>Sem vložíme obsah manuálu.</p>
+    <h1>📜 Grafické materiály</h1>
+
+    <h2>Instrukcja dla pacjentów – Jak używać Emmy</h2>
+    <p>Podívejte se na návod, jak používat Emmy krok za krokem.</p>
+    <a href="instrukcja-jak-uzywac.html">📄 Zobrazit dokument</a>
+
+    <h2>Instrukcja dla pacjentów – Ważne informacje</h2>
+    <p>Pacienti se dozví, proč je Emmy důležitá a jak jim pomáhá.</p>
+    <a href="instrukcja-wazne-info.html">📄 Zobrazit dokument</a>
+
+    <h2>Wizytówki dla pacjentów</h2>
+    <p>Vizitky s odkazem na online přístup k Emmy.</p>
+    <a href="wizytowki.html">📄 Zobrazit dokument</a>
 </body>
 </html>
+
