--- a/manual.html
+++ b/manual.html
@@ -3,15 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emmy manuál - Polsko</title>
+    <title>Emmy Manual - Polska</title>
     <style>
         body { font-family: Arial, sans-serif; padding: 20px; max-width: 800px; margin: auto; }
         a { display: block; margin-bottom: 20px; }
+        h1, h2 { color: #007BFF; }
+        img { max-width: 100%; height: auto; margin-bottom: 20px; }
     </style>
 </head>
 <body>
     <a href="index.html">⬅ Zpět na hlavní stránku</a>
-    <h1>📖 Emmy manuál - Polsko</h1>
-    <p>Sem vložíme obsah manuálu.</p>
+    <h1>📖 Emmy Manual - Polska</h1>
+
+    <h2>Podstawowe wymagania po zalogowaniu do aplikacji</h2>
+    <ul>
+        <li>✅ <strong>Identyfikacja pacjenta</strong> jest szybka i prosta – do dokładniejszej identyfikacji służy **numer PESEL**.</li>
+        <li>✅ <strong>Nazwa zgłoszenia</strong> jednoznacznie wskazuje, czego dotyczy wiadomość.</li>
+        <li>✅ <strong>Triage (priorytety)</strong> sortuje zgłoszenia według istotności klinicznej (najpierw problemy zdrowotne, na końcu sprawy administracyjne).</li>
+        <li>✅ Każdy pracownik widzi tylko zgłoszenia, które go dotyczą – dzięki **filtrom**.</li>
+        <li>✅ Widoczne są tylko zgłoszenia, które **czekają na przetworzenie** (statusy: nowy, nowa wiadomość, otwarte).</li>
+    </ul>
+
+    <h2>Identyfikacja pacjenta</h2>
+    <p>✅ Identyfikacja pacjenta jest szybka i prosta – do dokładniejszej identyfikacji służy numer PESEL.</p>
+    <img src="nazev-obrazku1.png" alt="Ukázka identifikace pacjenta" width="100%">
+
+    <h2>Widok zgłoszenia</h2>
+    <ul>
+        <li>📌 <strong>Identyfikacja pacjenta</strong> + przegląd jego wcześniejszych zgłoszeń.</li>
+        <li>📌 <strong>Atrybuty zgłoszenia</strong> w drugiej kolumnie.</li>
+        <li>📌 <strong>Podsumowanie wiadomości</strong> (wypełnionego formularza) od pacjenta.</li>
+        <li>📌 <strong>Łatwe kopiowanie</strong> treści jednym przyciskiem.</li>
+        <li>📌 <strong>Biblioteka gotowych odpowiedzi</strong> dla szybszej komunikacji.</li>
+        <li>📌 <strong>Możliwość bezpiecznego wysłania pacjentowi wrażliwych informacji</strong> jako załącznika.</li>
+    </ul>
+    <img src="nazev-obrazku2.png" alt="Widok zgłoszenia" width="100%">
+
+    <h2>Statusy zgłoszenia</h2>
+    <ul>
+        <li>🟢 <strong>Nowy</strong> – nowo utworzone zgłoszenie przez pacjenta.</li>
+        <li>🟡 <strong>Nowa wiadomość</strong> – nowa wiadomość od pacjenta.</li>
+        <li>🟠 <strong>Otwarte</strong> – otwarta wiadomość od pacjenta (odpowiednik „przeczytanego e-maila”).</li>
+        <li>🔵 <strong>U pacjenta</strong> – zmienia się automatycznie, gdy wiadomość zostanie wysłana do pacjenta.</li>
+        <li>✅ <strong>Rozwiązane</strong> – dla pacjenta zamknięte, nie może już odpowiadać.</li>
+        <li>❌ <strong>Zarchiwizowane</strong> – ukrywa zgłoszenie przed pacjentem, pozostaje w historii jako przekreślone.</li>
+    </ul>
+
+    <h2>Gotowe odpowiedzi - szablony (ikona książki)</h2>
+    <p>📌 <strong>Przygotowane wzory odpowiedzi</strong> – ułatwiają szybką komunikację.</p>
+    <p>📌 <strong>Użytkownik może edytować szablony</strong> w ustawieniach.</p>
+    <p>📌 Szablony mogą być <strong>podzielone na kategorie</strong>.</p>
+    <p>📌 Mogą zawierać <strong>zmienne wartości</strong> (np. imię pacjenta).</p>
+
+    <h2>Załączniki (ikona spinacza)</h2>
+    <p>📌 Możliwość dodania plików do wiadomości w celu <strong>bezpiecznego przesyłania dokumentów</strong> pacjentowi.</p>
 </body>
 </html>
