--- a/manual.html
+++ b/manual.html
@@ -57,5 +57,6 @@
 
     <h2>Załączniki (ikona spinacza)</h2>
     <p>📌 Możliwość dodania plików do wiadomości w celu <strong>bezpiecznego przesyłania dokumentów</strong> pacjentowi.</p>
+    <img src="obr3.png" alt="Ikona spinacza" width="100%">
 </body>
 </html>
