--- a/tips.html
+++ b/tips.html
@@ -3,15 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emmy manuál - Polsko</title>
+    <title>Tipy, triky, jak spustit Emmy w gabinecie</title>
     <style>
         body { font-family: Arial, sans-serif; padding: 20px; max-width: 800px; margin: auto; }
-        a { display: block; margin-bottom: 20px; }
+        a { display: block; margin-bottom: 10px; color: #007BFF; text-decoration: none; }
+        a:hover { text-decoration: underline; }
+        h1, h2 { color: #007BFF; }
     </style>
 </head>
 <body>
-    <a href="index.html">⬅ Zpět na hlavní stránku</a>
-    <h1>📖 Emmy manuál - Polsko</h1>
-    <p>Sem vložíme obsah manuálu.</p>
+    <a id="top"></a>
+    <h1>📖 Tipy, triky, jak spustit Emmy w gabinecie</h1>
+    <h2>Nawigacja</h2>
+    <a href="#sms">📩 Masowe SMS-y do pacjentów</a>
+    <a href="#sms-agreement">📜 Zgoda na wysłanie SMS-a</a>
+    <a href="#email">📧 Automatyczna odpowiedź e-mail</a>
+    <a href="#phone">📞 Automatyczna wiadomość na telefon</a>
+    <a href="#voip">📞 Ustawienia VoIP</a>
+    <a href="#web">🌐 Informacje na stronie internetowej</a>
+    <a href="#materials">📝 Materiały w poczekalni</a>
+
+    <h2 id="sms">📩 Masowe SMS-y do pacjentów</h2>
+    <p>Aby Emmy odniosła jak największy skutek, pacjenci muszą zostać o tym poinformowani. Najskuteczniejszym rozwiązaniem jest masowy SMS do wszystkich zarejestrowanych pacjentów o treści:</p>
+    <blockquote>„Wprowadzamy nowy, łatwy i bezpieczny sposób komunikacji w naszym gabinecie. Zarejestruj się, aby uzyskać bezpłatny dostęp na mojaemmy.pl/…”</blockquote>
+    <p>Pacjent zobaczy wybraną nazwę zamiast numeru nadawcy, np. „Imie”. Cena usługi wynosi 0,06 € z VAT za wiadomość SMS.</p>
+    <a href="#top">⬆ Zpět nahoru</a>
+
+    <h2 id="sms-agreement">📜 Zgoda na wysłanie SMS-a</h2>
+    <p>Przed wysłaniem wiadomości należy przesłać zgodę na adres e-mail Emmy.</p>
+    <blockquote>„Proszę wysłać masową wiadomość SMS do moich pacjentów z moich rejestrów dotyczącą korzystania z systemu Emmy o następującej treści: ‘Wprowadzamy nowy, łatwy i bezpieczny sposób komunikacji w naszej praktyce. Zarejestruj się, aby uzyskać bezpłatny dostęp na mojaemmy.pl/…’ i zgadzam się zapłacić 0,06 € z VAT za wiadomość SMS. Dziękuję XY”</blockquote>
+    <p>Adres do wysłania zgody: pomoc@mojaemmy.pl</p>
+    <a href="#top">⬆ Zpět nahoru</a>
+
+    <h2 id="email">📧 Automatyczna odpowiedź e-mail</h2>
+    <p><strong>Przykład 1:</strong> Tylko zgłoszenia, bez umawiania wizyt</p>
+    <blockquote>„Dziękujemy za wiadomość. Jednak obecnie rezygnujemy z poczty elektronicznej do komunikacji między naszą praktyką a pacjentami ze względu na większe bezpieczeństwo...”</blockquote>
+    <p><strong>Przykład 2:</strong> Komunikacja i umawianie wizyt</p>
+    <blockquote>„Dziękujemy za wiadomość. Emmy zapewni bezpieczne i wygodne przesłanie prośby do praktyki w formacie, który przyspieszy nasze przetwarzanie...”</blockquote>
+    <a href="#top">⬆ Zpět nahoru</a>
+
+    <h2 id="phone">📞 Automatyczna wiadomość na telefon</h2>
+    <p>Telefon dzwoni tylko przez krótki czas w gabinecie...</p>
+    <p><strong>Instrukcja ustawienia przekierowania połączeń:</strong></p>
+    <blockquote>
+        - 61*0048222639567# (ustawienie przekierowania)<br>
+        - ##61# (anulowanie przekierowania)<br>
+        - *#61# (sprawdzenie statusu przekierowania)
+    </blockquote>
+    <a href="#top">⬆ Zpět nahoru</a>
+
+    <h2 id="voip">📞 Ustawienia VoIP</h2>
+    <p>Przykładowe ustawienia dla usług VoIP (np. Odorik)</p>
+    <ul>
+        <li>Wejdź w ustawienia konta na stronie dostawcy usług, np. Odorik.</li>
+        <li>Wybierz menu głosowe IVR lub zarządzanie wiadomościami audio.</li>
+        <li>Prześlij pliki MP3 z treścią wiadomości.</li>
+    </ul>
+    <a href="#top">⬆ Zpět nahoru</a>
+
+    <h2 id="web">🌐 Informacje na stronie internetowej</h2>
+    <p>„Nasza praktyka korzysta z usługi Emmy – wirtualnej pielęgniarki (www.mojaemmy.pl)...”</p>
+    <p>Bezpośredni link do gabinetu: <a href="www.mojaemmy.pl">www.mojaemmy.pl</a></p>
+    <a href="#top">⬆ Zpět nahoru</a>
+
+    <h2 id="materials">📝 Materiały w poczekalni</h2>
+    <p>Oferujemy do pobrania:</p>
+    <ul>
+        <li>Ulotkę „Ważne informacje dla pacjentów”</li>
+        <li>Ulotkę „Jak korzystać z Emmy”</li>
+        <li>Wizytówki z linkiem i kodem QR do Emmy</li>
+    </ul>
+    <a href="#top">⬆ Zpět nahoru</a>
 </body>
 </html>
