--- a/graphics.html
+++ b/graphics.html
@@ -17,13 +17,16 @@
     <h2>Instrukcja dla pacjentów – Jak używać Emmy</h2>
     <p>Podívejte se na návod, jak používat Emmy krok za krokem.</p>
     <a href="instrukcja-jak-uzywac.html">📄 Zobrazit dokument</a>
+    <a href="https://docs.google.com/document/d/1xqYY8w1bdr1xId9X11EJq4DSjCjHDAKE/edit" target="_blank">📥 Stáhnout dokument</a>
 
     <h2>Instrukcja dla pacjentów – Ważne informacje</h2>
     <p>Pacienti se dozví, proč je Emmy důležitá a jak jim pomáhá.</p>
     <a href="instrukcja-wazne-info.html">📄 Zobrazit dokument</a>
+    <a href="https://docs.google.com/document/d/1VY4Sd_m6JFFf5Glkrpsk_oDPaxxgFtN9/edit" target="_blank">📥 Stáhnout dokument</a>
 
     <h2>Wizytówki dla pacjentów</h2>
     <p>Vizitky s odkazem na online přístup k Emmy.</p>
     <a href="wizytowki.html">📄 Zobrazit dokument</a>
+    <a href="https://docs.google.com/document/d/1soQmgDu6kqz-9EOqjjK3AvKQ8D54bTtg/edit#heading=h.gjdgxs" target="_blank">📥 Stáhnout dokument</a>
 </body>
 </html>
