--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         <h2>Centrum Pomocy</h2>
         <div class="menu-header">Podstawowe informacje</div>
         <a href="manual.html" class="menu-item">📖 Podręcznik MojaEmmy - Polska</a>
+        <div class="menu-header">Wdrażanie Emmy</div>
         <a href="tips.html" class="menu-item">⚙️ Wskazówki – Jak uruchomić MojaEmmy</a>
-        
-        <div class="menu-header">Materiały dodatkowe</div>
         <a href="graphics.html" class="menu-item">📜 Materiały graficzne</a>
+        <div class="menu-header">Materiały dodatkowe</div>
         <a href="voice.html" class="menu-item">🔊 Głos MojaEmmy</a>
     </div>
     <div id="content">
